--- a/README.html
+++ b/README.html
@@ -13,9 +13,9 @@
         <p>Transpropagation is a flexible, custom tool created using ArcGIS’s Arcpy python module. The user interface is created to allow operators to select multiple variables associated with the Friis Transmission Equation as well as multiple aggregate outputs. The aim of this project is to introduce the Transpropagation ArcGIS tool for modeling outside wireless signal propagation and radio signal transmission power. With the ever-growing Internet of Things, reliable network access has become essential in a wide range of computational tasks. Outdoor wireless access is no exception. Wireless access points (WAPs) are radio devices that provide a cost-effective solution for offering network access to many devices; from monitoring vehicle inventory or facility operations to providing internet access to an end user. There is a vast amount of literature and many proprietary solutions for WSP, but often the technology is locked behind a paywall or created using niche software. The significance of this tool lies in its ability to provide large scale, customizable WSP modeling that is built atop an established ArcGIS python tool framework.</p>
     <h2 id="requirements">Requirements</h2>
         <p>Access to ESRI's ArcMap or ArcGIS Pro</p>
-        <p>The two required input parameters include Input Radio Points Feature and an Input DEM. ##### <a href="#contents">Back to Contents</a></p>
+        <p>The two required input parameters include Input Radio Points Feature and an Input DEM. <a href="#contents">Back to Contents</a></p>
     <h2 id="installation">Installation</h2>
-        <p>In the Catalog window, ArcToolbox window, or ArcCatalog, navigate to the tool and select it. ##### <a href="#contents">Back to Contents</a></p>
+        <p>In the Catalog window, ArcToolbox window, or ArcCatalog, navigate to the tool and select it. <a href="#contents">Back to Contents</a></p>
     <h2 id="how-it-works">How it works</h2>
         <p>The user interface is created to allow operators to select multiple variables associated with the Friis Transmission Equation (FTE) as well as multiple aggregate outputs. The two required input parameters include Input Radio Points Feature and an Input DEM.</p>
     <div class="figure">
